--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   },
   "homepage": "https://github.com/justinjung90/SpitItOut",
   "devDependencies": {
+    "bootstrap": "^3.3.4",
     "css-loader": "^0.9.1",
     "file-loader": "^0.8.1",
+    "jquery": "^2.1.3",
     "jsx-loader": "^0.12.2",
     "less": "^2.4.0",
     "less-loader": "^2.2.0",
     "react": "^0.13.1",
+    "react-bootstrap": "^0.20.0",
     "style-loader": "^0.9.0",
     "url-loader": "^0.5.5",
     "webpack": "^1.7.3",
